--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,17 @@ services:
       - 3000:3000
     volumes:
       - .:/app
-      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - app-network
     extra_hosts:
       - "vector:127.0.0.1"
-    command: sh -c "npm install && npx tsc && node ./dist/index.js"
-  
+    environment:
+      DOCKER_HOST: tcp://docker-dind:2375
+      DOCKER: '{"host": "tcp://docker-dind:2375"}'
+    command: sh -c "sleep 60 && npm install && npx tsc && node ./dist/index.js"
+    depends_on:
+      - docker-dind  # Зависит от контейнера с Docker
+
   php:
     build:
       context: .
@@ -23,12 +27,10 @@ services:
     user: root
     volumes:
       - .:/var/www/html
-      - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      HOST_DIR: "/var/www/html" # для работы тестирования, менять на разположения откуда запускается докер  
+      HOST_DIR: "/home/egor/gitlab/accel_docker"  # Для работы тестирования, менять на расположение откуда запускается Docker
     networks:
       - app-network
-
 
   nginx:
     image: nginx:1.24.0
@@ -39,7 +41,8 @@ services:
       - ./for_docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
-
+    depends_on:
+      - node
 
   psql:
     build:
@@ -50,6 +53,20 @@ services:
     networks:
       - app-network
 
+  docker-dind:
+    image: docker:dind  # Используем Docker-in-Docker 
+    privileged: true  # Необходимо для работы DinD
+    volumes:
+      - docker-data:/var/lib/docker  # Сохраняем данные Docker внутри контейнера
+    networks:
+      - app-network
+    environment:
+      DOCKER_TLS_CERTDIR: ""  # Отключаем TLS
+    command: ["dockerd", "--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
+
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  docker-data:  # Том для хранения данных Docker
