--- a/Dockerfile.psql
+++ b/Dockerfile.psql
@@ -1,11 +1,13 @@
-FROM postgres:16
+FROM postgres:14
 
 ENV POSTGRES_USER=postgres
 ENV POSTGRES_PASSWORD=7136644
 
-COPY ./for_docker/psql/psql_with_some_files.dump /psql.dump
+# COPY ./for_docker/psql/psql_with_some_files.dump /psql.dump
 COPY ./for_docker/psql/init.sh /docker-entrypoint-initdb.d/init.sh
+COPY ./accelerator/db/*.sql /sql_dump/
 
+RUN apt-get update && apt install dos2unix && dos2unix /docker-entrypoint-initdb.d/init.sh
 RUN chmod +x /docker-entrypoint-initdb.d/init.sh
 
 EXPOSE 5432
