--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     volumes:
       - ./accelerator:/var/www/html
       - ./for_docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./for_docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - app-network
     depends_on:
