--- a/for_docker/nginx/default.conf
+++ b/for_docker/nginx/default.conf
@@ -26,6 +26,12 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Content-Type';
+    
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     location /editor/ {
@@ -35,6 +41,13 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        # add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Content-Type';
+    
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     location ~ /\. {
