--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     extra_hosts:
       - "vector:127.0.0.1"
     environment:
+      TZ: Europe/Moscow 
       DOCKER_HOST: tcp://docker-dind:2375
       DOCKER: '{"host": "tcp://docker-dind:2375"}'
     command: sh -c "sleep 30 && cd ./accelerator && npm install && cd ../nitori_base && npm install && npx tsc && node ./dist/index.js"
@@ -32,6 +33,7 @@ services:
       - ./backups:/backups
       - .env:/.env
     environment:
+      TZ: Europe/Moscow 
       HOST_DIR: "/var/www/html"  
       DOCKER_HOST: tcp://docker-dind:2375
       DOCKER: '{"host": "tcp://docker-dind:2375"}'    
@@ -43,6 +45,8 @@ services:
     image: nginx:1.24.0
     ports:
       - "8080:80"
+    environment:
+      - TZ=Europe/Moscow
     volumes:
       - ./accelerator:/var/www/html
       - ./for_docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
@@ -59,6 +63,8 @@ services:
       dockerfile: Dockerfile.psql
     environment:
       - TZ=Europe/Moscow
+      - LC_TIME=C  # Устанавливает 24-часовой формат
+      - LC_ALL=C # Дополнительно устанавливает локаль
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
