--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # .env
+POSTGRES_HOST=psql
+POSTGRES_INNER_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=7136644
 POSTGRES_DB=accelerator
-POSTGRES_HOST=psql
-POSTGRES_INNER_PORT=5432
+
+HOST_DIR=/var/www/html
