--- a/for_docker/nginx/default.conf
+++ b/for_docker/nginx/default.conf
@@ -4,6 +4,8 @@ server {
 
     root /var/www/html;
     index index.html index.htm index.php;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 
     server_name _;
 
@@ -11,11 +13,18 @@ server {
         try_files $uri $uri/ =404;
     }
 
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires max;
+        add_header Cache-Control "public, no-transform";
+    }
 
     location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000; 
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;  
     }
 
