--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,35 +29,6 @@ services:
       - app-network
     restart: unless-stopped
 
-  php:
-    container_name: accel-php
-    build:
-      context: .
-      dockerfile: Dockerfile.php
-    user: root
-    volumes:
-      - ./accelerator:${HOST_DIR}
-      - ./backups:/backups
-      - .env:/.env
-    environment:
-      TZ: Europe/Moscow 
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_INNER_PORT: ${POSTGRES_INNER_PORT}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      HOST_DIR: ${HOST_DIR}  
-      DOCKER_HOST: tcp://docker-dind:2375
-      DOCKER: '{"host": "tcp://docker-dind:2375"}' 
-    # ДЛЯ ОТЛАДКИ (XDEBUG):
-    # extra_hosts:
-      # - "host.docker.internal:host-gateway"
-    depends_on:
-      psql:
-        condition: service_healthy
-    networks:
-      - app-network
-
   docker-dind:
     container_name: accel-docker-dind
     image: docker:dind 
@@ -91,6 +62,37 @@ services:
     networks:
       - app-network
     restart: unless-stopped
+
+  php:
+    container_name: accel-php
+    build:
+      context: .
+      dockerfile: Dockerfile.php
+    user: root
+    volumes:
+      - ./accelerator:${HOST_DIR}
+      - ./backups:/backups
+      - .env:/.env
+    environment:
+      TZ: Europe/Moscow 
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_INNER_PORT: ${POSTGRES_INNER_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      HOST_DIR: ${HOST_DIR}  
+      DOCKER_HOST: tcp://docker-dind:2375
+      DOCKER: '{"host": "tcp://docker-dind:2375"}' 
+    # ДЛЯ ОТЛАДКИ (XDEBUG):
+    # extra_hosts:
+      # - "host.docker.internal:host-gateway"
+    depends_on:
+      psql:
+        condition: service_healthy
+      docker-dind:
+        condition: service_healthy
+    networks:
+      - app-network
 
   node:
     container_name: accel-node
