--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-Dockerfile linguist-language=Docker
+Dockerfile* linguist-language=Docker
 for_accelerator -linguist-detectable
 for_docker -linguist-detectable
 accelerator -linguist-detectable
