--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
 Dockerfile* linguist-language=Docker
-for_accelerator -linguist-detectable
-for_docker -linguist-detectable
-accelerator -linguist-detectable
-nitori_base -linguist-detectable
+for_accelerator/* -linguist-detectable
+for_docker/* -linguist-detectable
